--- a/styles/index.css
+++ b/styles/index.css
@@ -10,24 +10,16 @@
 
 
 
-/*********************/
-/* CUSTOM PROPERTIES (alle kleurn fonts)*/
-/*********************/
+/*******************************************/
+/* CUSTOM PROPERTIES (alle kleuren & fonts)*/
+/*******************************************/
 :root {
 	/* startje */
-	--color-text:#111;
-	--color-background:rgb(255, 251, 245);
+	--color-text:#111; 
+	--color-background:#f4f4f4;   
+    --p-color: #6c6c6c;
+    --button-color: #008248;
 }
-
-
-
-
-
-/****************/
-/* JOUW STYLING */
-/****************/
-
-/* jouw code */
 
 /***************/
 /* LETTERTYPES */
@@ -53,6 +45,24 @@
     font-style: normal;
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /***************/
 /* ALLE FOTO'S */
 /***************/
@@ -69,7 +79,6 @@ header {
 
 header h1 img{
 	width: 200%;
-    
 }
 
 main img {
@@ -99,31 +108,25 @@ header h1 img {
     width: 30px;
 }
 
-/**************/
-/* SECTION 2 */
-/* FONT TITEL */
-/**************/
-body main section:nth-of-type(2) h2 {
-	/* font-family: 'open-sans', 'sans-serif'; */
-	font-size:1.5em;
-    margin: 0;
-    padding: 0;
-}
+/***************/
+/* MENU BUTTON */
+/***************/
 
-body {
-    font-family:'SoDoSansBold';
+header button {
+    border: none;
+    border-radius: 12px;
+    padding: 5px;
+    right: 3em;
 }
 
 /********/
 /* MENU */
 /********/
-body {
+body main {
     color:var(--color-text);
     background-color:var(--color-background);
     margin: 0;
-
-    /* font-family:avenir, sans-serif ; */
-  }
+}
 
 header {
       display: flex;
@@ -165,12 +168,13 @@ header nav ul {
 
 header nav ul li {
     border: none;
-
     height: 4em;
 }
 
 header nav ul li a {
     text-decoration: none;
+    color:var(---color-text);
+    font-family: 'SoDoSansRegular';
 }
 
 @media (min-width:40em) {
@@ -197,20 +201,9 @@ header nav ul li a {
 	}
 }
 
-/***************/
-/* MENU BUTTON */
-/***************/
-
-header button {
-    border: none;
-    border-radius: 12px;
-    padding: 5px;
-    right: 3em;
-}
-
 
 /*******************************/
-/* Bestel nu & locatie buttons */
+/* BESTEL NU & LOCATIE BUTTONS */
 /*******************************/
 main section:first-of-type {
     position: relative;
@@ -244,9 +237,136 @@ main section:first-of-type ul li {
 main section:first-of-type ul li a{
 	color: hsl(0, 0%, 100%);
 	text-decoration: none;
+    font-family: 'SoDoSansRegular';
 }
 
+/*******************************/
+/** SECTION 2: MEETUP SEIZOEN **/
+/*******************************/
+body main section:nth-of-type(2) h2 {
+    padding-left: 1em;
+    padding-right: 1em; 
+    font-family: 'SoDoSansRegular' ;
+}
 
+body main section:nth-of-type(2) p {
+    font-family: 'SoDoSansRegular';
+    color: var(--p-color); 
+    padding-left: 1em;
+    padding-right: 1em; 
+}
+
+/*********************************/
+/** SECTION 3: BEZORGD AAN HUIS **/
+/*********************************/
+body main section:nth-of-type(3) {
+    padding-left: 1em;
+    padding-right: 1em; 
+}
+
+body main section:nth-of-type(3) h2 {
+	font-size:1.5em;
+    margin: 0;
+    padding: 0;
+    font-family:'SoDoSansBold';
+}
+
+body main section:nth-of-type(3) p>span {
+    font-family:'SoDoSansSemiBold';
+    color:var(--color-text);
+}
+
+body main section:nth-of-type(3) p {
+    font-family:'SoDoSansRegular';
+    color:var(--p-color);    
+}
+
+body main section:nth-of-type(3) button {
+    color:var(--button-color);
+	text-decoration: none;
+    border-radius: 200px;
+    background-color:var(--color-background);
+    border: 1px solid var(--button-color);
+    text-align: center;
+    padding: .5em;
+    font-family: 'SoDoSansSemiBold';
+}
+
+/**************************/
+/** SECTION 4: ARTIKELEN **/
+/**************************/
+
+body main section:nth-of-type(4) article {
+    border: 1px #5f5f5f;
+    padding: 10px;
+    box-shadow: 0 0.2rem 0.8rem 0.1rem #c1c1c1, 0 0.1rem 0.1rem; 
+    margin-left: 1em;
+    margin-right: 1em;
+    background-color: #f4f4f4;
+}
+
+body main section:nth-of-type(4) article h3 {
+    font-family: 'SoDoSansRegular';
+}
+
+body main section:nth-of-type(4) article p {
+    font-family:'SoDoSansRegular';
+    color:var(--p-color);  
+}
+
+body main section:nth-of-type(4) button {
+    color:var(--button-color);
+	text-decoration: none;
+    border-radius: 200px;
+    background-color:var(--color-background);
+    border: 1px solid var(--button-color);
+    text-align: center;
+    padding: .5em;
+    font-family: 'SoDoSansSemiBold';
+}
+
+/************/
+/** FOOTER **/
+/************/
+footer {
+    background-color:#ffffff;
+}
+
+footer h2 {
+    font-family: 'SoDoSansRegular';
+}
+
+footer ul li {
+    list-style: none;
+}
+
+footer ul li a {
+    color:var(--p-color);
+	text-decoration: none;
+    font-family: 'SoDoSansRegular';
+}
+
+footer img {
+    padding-left: 1em;
+    padding-right: 1em; 
+    height:2em;
+    position: relative;
+    padding-left: 2em;
+}
+
+footer img>span {
+    height: 100px;
+    width: 100px;
+    position: absolute;
+    margin-right:-600%;
+}
+
+footer p {
+    font-family: 'SoDoSansRegular';
+    font-weight: bold;
+    padding-left: 1em;
+    padding-right: 1em;
+}
 
 /* dit is voor de 4 boxen onderin -> box-shadow: 0 0.2rem 0.8rem 0.1rem hsla(0,0%,42.4%,.11), 0 0.1rem 0.1rem 
 /* position: relative;;
