--- a/styles/style.css
+++ b/styles/style.css
@@ -173,6 +173,11 @@ header nav ul li a {
     font-family: 'SoDoSansRegular';
 }
 
+nav a:hover {
+	color:#008248;
+	transition: 0.3s;
+}
+
 @media (min-width:40em) {
 	header{
 		display:block;
@@ -325,6 +330,10 @@ body main section:nth-of-type(3) ul li a {
     padding: 0,5em;
 }
 
+body main section:nth-of-type(3) h3.ontdekonzedranken {
+    visibility: hidden;
+}
+
 
 /***************************/
 /** SECTION 4: ALLERGENEN **/
@@ -411,6 +420,13 @@ footer p {
 	padding-left: 2em;
 }
 
+footer section:nth-of-type(4) h2.socialmedia {
+    visibility: hidden;
+}
+
+footer section:nth-of-type(5) h3.regels {
+    visibility: hidden;
+}
 
 
 
